--- a/gradiant.html
+++ b/gradiant.html
@@ -4,7 +4,7 @@
     <!-- <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>background</title>
-	<link rel="stylesheet" type="text/css" href="D:\web devolopment\background gradiant\first\style.css">
+	<link rel="stylesheet" type="text/css" href=".\style.css">
 </head>
 <body id="bod">
 	<h1>Background Generator</h1>
@@ -42,6 +42,6 @@
 	    </div>
 	</div>
 
-	<script type="text/javascript" src="D:\web devolopment\background gradiant\first\script.js"></script>
+	<script type="text/javascript" src=".\script.js"></script>
 </body>
 </html>
