--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
 	            <a href="https://www.instagram.com/albraa_3adil/" class="fa fa-instagram"></a>
 	        </div>
 	        <div class="bottom-box-media-links">
-	            <!-- <a href="whatsapp:contact=015555555555@s.whatsapp.com&message="I'd like to chat with you"' class="fa fa-instagram"></a> -->
 	            <a href="https://wa.me/249125111310?text=Welcome%20Albraa" class="fa fa-whatsapp"></a>
+	        </div>
+	        <div class="bottom-box-media-links">
+	            <a href="tel:+249-12-511-1310" class="fa fa-phone"></a>
 	        </div>
 	    </div>
 	</div>
