--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
 		</div>
 	</div>
 	<h2>current css background</h2>
-	<h3></h3>
+	<div class="copy_con">
+		<h3 id="copy">linear-gradient(90deg, rgb(17, 17, 17), rgb(255, 255, 255));</h3>
+		<button onclick="copy()" ><i class="fa fa-copy"></i></button>
+	</div>
+	
 
 
 	<div class="bottom-box">
